--- a/v1B/style.css
+++ b/v1B/style.css
@@ -1,24 +1,68 @@
+/* vol boxes */
+.vol-col {
+  text-align: center;
+  background-color: lightblue;
+  display: flex;
+  justify-content: space-between; /* Distribute items evenly with space between */
+  align-items: flex-end;
+  max-width: fit-content;
+  min-width: fit-content;
+  min-height: max-content;
+  padding: 10px;
+  border: 10px solid #ccc;
+  box-sizing: border-box;
+  text-align: center;
+  max-width:100px;
+}
+.meters {
+  text-align: center;
+  max-width:100px; 
+  vertical-align: bottom;
+  border: 5px solid #9fa5ab00;
+}
+
+
+.vol-col-label {
+  align-self: flex-end;
+  text-align: center;
+  background-color: rgb(219, 219, 219);
+  border-radius: 6px;
+  padding-left: 5%;
+  padding-right: 5%;
+  max-height: 30%;
+}
+
 meter {
   writing-mode: vertical-lr;
   flex: 1;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   align-items: center;
   margin-top: 10%;
+  max-height: 280px;
   min-height: 280px;
-  /* background-color: red; */
-  width: 45px;
-  /* -webkit-appearance: none; Reset appearance */
-  border: 5px solid #ccc;
+  min-width: 45px;
+  max-width: 45px;
+  /* border: 5px solid #ccc; */
+  border: 0px;
   border-radius: 3px;
+  border-color: transparent;
 }
 meter::-webkit-meter-bar {
-  writing-mode: vertical-lr;
-  background: none; /* Required to get rid of the default background property */
-  background-color: whiteSmoke;
-  box-shadow: 0 5px 5px -5px #333 inset;
+  -webkit-appearance: none; 
+  -moz-appearance: none; 
+  appearance: none; 
   -webkit-user-modify: read-only !important;
-  box-sizing: border-box;
+  writing-mode: vertical-lr;
+  border-radius: 0px;
+  border-color: lightblue;  /* temporary fix for matching bk color */
+  /* border-radius: 3px;     makes meters rectangles instead of circluar */
+  background: none; /*Required to get rid of the default background property*/
+  background-color: whiteSmoke;
+  /* box-shadow: 0 5px 5px -5px #333 inset; */
+  box-sizing: border-box; 
+  justify-content: center;
+  width: 25px;
 }
 
 
@@ -142,17 +186,6 @@ input:checked + .slider:before {
   border-radius: 6px;
 
 }
-
-.VolCol {
-  text-align: center;
-  padding: 0;
-  padding-left: 0;
-  margin-left: 0%;
-  width:100px;
-  background-color: lightblue; 
-  min-height: 100%;
-}
-
 
 .knobBox {
   width:fit-content;
